Update DeploymentListener.java